syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/vorteil/direktiv/pkg/functions/grpc";

import "pkg/functions/grpc/functions-common.proto";

message GetFunctionRequest {
	optional string ServiceName = 1;
}

message GetFunctionResponse {
	optional string name = 1;
	optional string namespace = 2;
	optional string workflow = 3;
	optional FunctionsConfig config = 4;
	repeated Revision revisions = 5;
	optional string scope = 6;
}
