syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

message GetIsolateRequest {
	optional string ServiceName = 1;
}

message Revision {
	optional string name = 1;
	optional string image = 2;
	optional string cmd = 3;
	optional int32 size = 4;
	optional int32 minScale = 5;

	optional int64 generation = 6;
	optional int64 created = 7;

	optional string status = 8;
	optional string statusMessage = 9;

	optional int64 traffic = 10;
}

message GetIsolateResponse {
	optional string name = 1;
	optional string namespace = 2;
	optional string workflow = 3;

	repeated Revision revisions = 4;
}
