syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

import "pkg/isolates/grpc/isolates-common.proto";

message IsolateInfo {
	optional BaseInfo info = 1;
	optional string status = 2;
	repeated Condition conditions = 3;
	optional string serviceName = 4;
}

message ListIsolatesResponse {
	optional IsolateConfig config = 1;
	repeated IsolateInfo isolates = 2;
}

message ListIsolatesRequest {
	map<string, string> annotations = 1;
}
