syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

message TrafficValue {
	optional string revision = 1;
	optional int64 percent = 2;
}

message SetTrafficRequest {
	optional string name = 1;
	repeated TrafficValue traffic = 2;
}
