syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

import "pkg/isolates/grpc/isolates-common.proto";

message UpdateIsolateRequest {
	optional BaseInfo info = 1;
	optional string ServiceName = 2;
}
